# generic-data-structures

./: CMakeLists.txt  Readme.md
docs/: Doxyfile.in
examples/: demo_1.cpp
include/: DoublyLinkedList.hpp  DoublyLinkedListNode.hpp  Hashset.hpp  HashsetList.hpp  HashsetNode.hpp  Interfaces.hpp  PriorityQueue.hpp  Queue.hpp  SinglyLinkedList.hpp  SinglyLinkedListNode.hpp  Stack.hpp  TreeNode.hpp
src/: create_graphs.py
tests/: private_test.cpp  test_florian.cpp  test_julian.cpp  test_max.cpp  zeitmessung.cpp
